# jtypecheck

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  development.md  pixi.toml
.github/workflows/: ci.yml  release-annotations.yml  release.yml
example/: README.md
example/java/example/: BindType.java  Correct.java  Document.java  HandWritten.java  Incorrect.java  Mangle.java  NativeMethod.java  NativeObject.java  Overloaded.java
example/rust/: Cargo.toml
example/rust/src/: bind_type.rs  document.rs  hand_written.rs  lib.rs  mangle.rs  native_method.rs  overloaded.rs
jnisafe/: Cargo.toml  README.md
jnisafe-annotations/: module-info.java  pom.xml
jnisafe-annotations/io/github/mailmindlin/jnisafe/: Ignore.java  Mut.java  Owned.java  Ref.java  SuppressJni.java
jnisafe-check/: Cargo.toml  README.md
jnisafe-check/examples/: demo.rs
jnisafe-check/src/: cfg.rs  check.rs  cli.rs  code.rs  diagnostics.rs  flow.rs  ir.rs  java_loader.rs  jdk.rs  lib.rs  main.rs  mangle.rs  rust_loader.rs  typemap.rs
jnisafe-check/src/rust_loader/: macros.rs
jnisafe-check/tests/: e2e.rs
jnisafe-check/tests/fixtures/: README.md
jnisafe-check/tests/fixtures/arrays/: Arrays.java  natives.rs
jnisafe-check/tests/fixtures/field_handles/: FieldHandles.java  wrong.rs
jnisafe-check/tests/fixtures/flow/: AffineMove.java  AliasFlow.java  ExposeFlow.java  FieldTake.java  Flow.java  Forge.java  OwnedFieldDisposed.java  OwnedFieldLeak.java  SuppressFlow.java
jnisafe-check/tests/fixtures/incorrect/: Incorrect.java  wrong.rs
jnisafe-check/tests/fixtures/incorrect_calls/: IncorrectCalls.java  wrong.rs
jnisafe-check/tests/fixtures/incorrect_macros/: IncorrectMacros.java  wrong.rs
jnisafe-check/tests/fixtures/jdk_declared/: natives.rs
jnisafe-check/tests/fixtures/jdk_inherited/: natives.rs
jnisafe-check/tests/fixtures/jdk_missing/: wrong.rs
jnisafe-check/tests/fixtures/object_arrays/: MyArrayElement.java  ObjectArrays.java  natives.rs
jnisafe-check/tests/fixtures/overloaded/: natives.rs
jnisafe/src/: handle.rs  lib.rs  registry.rs  traits.rs
