[workspace]
resolver = "3"
members = ["jnisafe", "jnisafe-check", "example/rust"]

[workspace.package]
edition = "2024"
version = "0.1.0"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mailmindlin/jtypecheck"

[workspace.dependencies]
jnisafe = { path = "./jnisafe" }
jni = "0.22.4"
