[package]
name = "jnisafe-check"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Static checker that verifies a Rust/Java JNI layer agrees on names, signatures, and pointer types."
readme = "README.md"
keywords = ["jni", "java", "ffi", "jvm", "lint"]
categories = ["development-tools", "development-tools::testing", "command-line-utilities"]

[[bin]]
name = "jnisafe-check"
path = "src/main.rs"

[lib]
name = "jnisafe_check"
path = "src/lib.rs"

[dependencies]
cafebabe = "0.9.0"
clap = { version = "4.6.1", features = ["derive"] }
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
