[package]
name = "jnisafe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime wrapper types for safe Rust/Java JNI pointer handles (JOwned, JRef, JMut)."
readme = "README.md"
keywords = ["jni", "java", "ffi", "jvm", "pointer"]
categories = ["external-ffi-bindings", "development-tools"]

[dependencies]
jni.workspace = true
