[package]
name = "example"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# `cdylib` so the JVM can `System.loadLibrary("example")` and run `example.Main`;
# `rlib` so `jnisafe-check`'s e2e tests can still treat it as a normal crate.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jnisafe.workspace = true
jni.workspace = true